2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_arm_edb7xxx.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2003-12-05  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/hal_diag.h: hal_delay_us() is a C function.


2003-09-21  Gary Thomas  <gary@mlbassoc.com>

	* misc/edb7312_redboot_RAM.ecm: 
	* misc/edb7312_redboot_ROM.ecm: 
	* misc/edb7312_redboot_ROMRAM.ecm:  Adjust for changes in RedBoot
	template - DNS now must be enabled manually.

2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_arm_edb7xxx.cdl:
        Changed values for CYGNUM_HAL_RTC_NUMERATOR,
        CYGNUM_HAL_RTC_DENOMINATOR and CYGNUM_HAL_RTC_PERIOD to
        "default_value" from "calculated". This makes it easier
        to change these values globally.
        
2003-03-28  Jani Monoses  <jani@iv.ro>

	* include/hal_platform_setup.h: EDB7211 has two 8M FLASH chips
	with different chip selects, so map them contiguously.
	Also fix compiler warning with #if to #ifdef.

	* include/pkgconf/mlt_arm_edb7211_rom.mlt: Update to reflect ROM
	being 16M not 8M now.
	* include/pkgconf/mlt_arm_edb7211_rom.ldi: Ditto.
	* include/pkgconf/mlt_arm_edb7211_rom.h: Ditto.

2003-02-13  Gary Thomas  <gary@mlbassoc.com>

	* include/plf_io.h: Add CYG_MACRO_START/END markers to match
	recent changes in arch code.

	* cdl/hal_arm_edb7xxx.cdl: Builds without RedBoot+Linux-exec
	were broken by recent changes.

2003-02-12  Gary Thomas  <gary@mlbassoc.com>

	* include/plf_io.h: Provide proper memory layout for EDB7312.

2003-02-06  Gary Thomas  <gary@mind.be>

	* misc/edb7312_redboot_ROMRAM.ecm: 
	* src/edb7xxx_misc.c: 
	* include/plf_io.h: 
	* include/hal_platform_setup.h: 
	* cdl/hal_arm_edb7xxx.cdl: Add support for booting Linux by defining
	CYGARC_PHYSICAL_ADDRESS().

2002-12-06  Gary Thomas  <gthomas@ecoscentric.com>

	* misc/edb7312_redboot_ROMRAM.ecm: 
	* misc/edb7312_redboot_ROM.ecm: 
	* misc/edb7312_redboot_RAM.ecm: 
	* misc/edb7212_redboot_ROM.ecm: 